#23 Mod S3のバケット名を環境変数を使うように変更

--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -499,6 +499,7 @@
     }
     const user_pk = "{{ request.user.pk }}";
     const username = "{{ request.user.username }}";
+    const bucket_name = "{{ bucket_name }}";
     const highlight_url = "{% url 'highlight-list' %}";
     const task_url = "{% url 'task-list' %}";
     const studio_url = "{% url 'studio' %}";
