Del トーク取得URLの削除

--- a/cliphype/templates/app/base.html
+++ b/cliphype/templates/app/base.html
@@ -59,7 +59,6 @@
 									<span class="caret"></span>
 								</button>
 								<ul class="dropdown-menu">
-									<li><a class="ml-3 text-dark" href="https://id.twitch.tv/oauth2/authorize?client_id=0d4wa7ktjah3cfu16uu4xdi9hwra4m&redirect_uri=http://localhost:8000/studio&response_type=token">Auth</a></li>
 									<li><a class="ml-3 text-dark" href="{% url 'report' %}">Report</a></li>
 									<li><a class="ml-3 text-dark" href="{% url 'account_logout' %}">Logout</a></li>
 									<li><a class="ml-3 text-dark" href="{% url 'unlink' %}">Disconnect</a></li>
@@ -89,7 +88,7 @@
 	<footer class="py-4 bg-dark text-light">
 		<div class="container text-center">
 			<p><small class="font-weight-bold">Contact @</small>
-				<a href="https://twitter.com/HrmkJpn" target="_blank"><i class="fab fa-twitter-square ml-1" style="color:white; font-size: 1.5em"></i></a>
+				<a href="https://twitter.com/hrmk_code" target="_blank"><i class="fab fa-twitter-square ml-1" style="color:white; font-size: 1.5em"></i></a>
 			</p>
 		</div>
 		<div class="text-center">
