--- a/cliphype/templates/app/base.html
+++ b/cliphype/templates/app/base.html
@@ -34,7 +34,7 @@
 </head>
 <body class="bg-light">
 {% block body %}
-<div id="app">
+<div id="app" v-cloak>
 	<!-- HEADER -->
 	<nav class="navbar navbar-expand navbar-white bg-white navbar-clip shadow-sm">
     <div class="container">
