--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -264,7 +264,7 @@
         <div class="p-3 my-4 shadow section bg-white">
             <div class="row p-3">
                 <div class="col-8">
-                <div class="col-12">
+                <div class="bg-light p-2 rounded shadow-sm">
                     <h3 class="text-dark font-weight-bold">Title</h3>
                     <input type="text" v-model="title" class="input-lg border rounded shadow-sm py-1" required>
                 <div class="mt-3">
@@ -351,9 +351,13 @@
                         <h6 class="text-dark font-weight-bold ml-1 pt-2">ms</h6>
                     </label>
                 </div>
-                <div class="custom-control custom-checkbox mt-3">
+                </div>
+                <div class="bg-light p-3 rounded shadow-sm mt-3">
+                <div class="custom-control custom-checkbox">
                     <input class="custom-control-input" type="checkbox" id="drawtext" v-model="isDrawText">
-                    <label class="custom-control-label" for="drawtext"><h4>Draw Text</h4></label>
+                    <label class="custom-control-label" for="drawtext">
+                        <h4 class="text-dark font-weight-bold">Draw Text</h4>
+                    </label>
                 </div>
                 <div class="mt-3">
                     <h4 class="text-dark font-weight-bold">fontsize</h4>
