--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -328,7 +328,7 @@
         <div class="p-3 my-4 shadow section bg-white">
             <div class="row p-3">
                 <div class="col-8">
-                <div class="bg-light p-2 rounded shadow-sm">
+                <div class="bg-light p-3 rounded shadow-sm">
                     <h3 class="text-dark font-weight-bold">Title</h3>
                     <input type="text" v-model="title" class="input-lg border rounded shadow-sm py-1" required>
                 <div class="mt-3">
@@ -414,6 +414,14 @@
                         <input type="number" class="border shadow-sm px-2 rounded" v-model="duration" min="200" max="2000" step="100">
                         <h6 class="text-dark font-weight-bold ml-1 pt-2">ms</h6>
                     </label>
+                </div>
+                <div class="mt-3">
+                    <div class="custom-control custom-checkbox">
+                        <input class="custom-control-input" type="checkbox" id="fl_transition" v-model="isFLTransition">
+                        <label class="custom-control-label" for="fl_transition">
+                            <h4 class="text-dark font-weight-bold">First-Last Transition</h4>
+                    </label>
+                    </div>
                 </div>
                 </div>
                 <div class="bg-light p-3 rounded shadow-sm mt-3">
