--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -275,7 +275,7 @@
                 </span>
                 <span class="ml-2">
                     <span v-bind:class="{ 'text-danger': playTimeExceeded }">
-                    Play time : [[ getTotalClipSeconds ]]
+                    Length : [[ getTotalClipSeconds ]]
                     </span>
                 </span>
                 <!--
