Fix icon background color

--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -35,7 +35,7 @@
                     :prev-link-class="'page-link rounded-circle mt-3 mr-2 bg-light shadow-sm'"
                     >
             </paginate>
-        <div class="bg-secondary rounded ml-1" v-for="item in getFollowsItems">
+        <div class="bg-light rounded ml-1" v-for="item in getFollowsItems">
             <div class="card bg-light border-0">
                 <a v-on:click="streamerName = item.to_login; streamerId = item.to_id;" style="cursor: pointer">
                 <div class="card-img">
