--- a/cliphype/static/app/css/style.css
+++ b/cliphype/static/app/css/style.css
@@ -15,6 +15,9 @@
 .bg-twitch-dark {
     background: #2b2b5f;
 }
+.bg-black {
+    background: #000000;
+}
 .text-twitch-light {
     color: #9147FF;
 }
