--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -213,7 +213,7 @@
                                                 frameborder="0"
                                                 scrolling="no">
                                 </iframe>
-                            </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -301,7 +301,7 @@
                     <div class="card-img-overlay">
                         <span class="font-weight-bold font-italic text-light timelineIndex">[[ index + timelinePageIndex + 1 ]]</span>
                         <div v-show="item.isHover">
-                            <a class="timelinePlay" v-on:click="openTimelineModal(item.embed_url)"><i class="far fa-play-circle text-light"></i></a>
+                            <a class="timelinePlay" v-on:click="openTimelineModal(item.embed_url, index + timelinePageIndex)"><i class="far fa-play-circle text-light"></i></a>
                             <a class="timelineMenu" v-on:click="clickSelectedClipMenu(item)"><i class="fas fa-ellipsis-v text-light"></i></a>
                             <a class="timelineRemove" v-on:click="removeTimelineClip(index)"><i class="fas fa-times-circle text-danger"></i></a>
                             <a class="timelinePrev" v-on:click="movePrevTimelineClip(index)"><i class="fas fa-arrow-circle-left text-warning"></i></a>
@@ -320,13 +320,18 @@
 
             <div class="modal fade" id="timelineModal" tabindex="-1" role="dialog" aria-labelledby="label1" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-                    <div class="modal-content bg-dark">
+                    <div class="modal-content bg-black">
+                        <div class="ml-2 text-light font-weight-bold">[[ selectedClipModalIndex+1 ]]</div>
                         <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item"
                                         v-bind:src="timelineEmbedUrl"
                                         frameborder="0"
                                         scrolling="no">
                         </iframe>
+                        </div>
+                        <div class="mx-auto">
+                            <a class="mr-4 display-4" style="cursor: pointer;" v-on:click="openPrevSelectedClip"><i class="fas fa-angle-left text-info"></i></a>
+                            <a class="ml-4 display-4" style="cursor: pointer;" v-on:click="openNextSelectedClip"><i class="fas fa-angle-right text-info"></i></a>
                         </div>
                     </div>
                 </div>
