--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -321,7 +321,17 @@
             <div class="modal fade" id="timelineModal" tabindex="-1" role="dialog" aria-labelledby="label1" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content bg-black">
-                        <div class="ml-2 text-light font-weight-bold">[[ selectedClipModalIndex+1 ]]</div>
+                        <div class="d-inline-flex my-1">
+                            <div class="d-flex align-items-center badge bg-dark px-3 ml-2 rounded-pill">
+                                <span class="px-3 font-weight-bold text-light" style="font-size: 20px;">
+                                    [[ selectedClipModalIndex+1 ]]
+                                </span>
+                            </div>
+                            <a class="ml-3 btn bg-success" v-bind:href="selectedClipEditURL" target="_blank">
+                                <i class="fas fa-cut"></i>
+                                <span class="ml-2">[[ selectedClipEditableTime ]]</span>
+                            </a>
+                        </div>
                         <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item"
                                         v-bind:src="timelineEmbedUrl"
@@ -330,8 +340,8 @@
                         </iframe>
                         </div>
                         <div class="mx-auto">
-                            <a class="mr-4 display-4" style="cursor: pointer;" v-on:click="openPrevSelectedClip"><i class="fas fa-angle-left text-info"></i></a>
-                            <a class="ml-4 display-4" style="cursor: pointer;" v-on:click="openNextSelectedClip"><i class="fas fa-angle-right text-info"></i></a>
+                            <a class="mr-4 display-4" style="cursor: pointer;" v-on:click="openPrevSelectedClip"><i class="fas fa-angle-left text-light"></i></a>
+                            <a class="ml-4 display-4" style="cursor: pointer;" v-on:click="openNextSelectedClip"><i class="fas fa-angle-right text-light"></i></a>
                         </div>
                     </div>
                 </div>
