--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -327,6 +327,9 @@
                                     [[ selectedClipModalIndex+1 ]]
                                 </span>
                             </div>
+                            <div class="ml-2">
+                                <input class="px-2 py-1 bg-dark text-light input-lg border rounded shadow-sm" v-model="selectedClipTitle">
+                            </div>
                             <a class="ml-3 btn bg-success" v-bind:href="selectedClipEditURL" v-show="selectedClipEditableTime !== 0" target="_blank">
                                 <i class="fas fa-cut"></i>
                                 <span class="ml-2">[[ formattedEditableTime ]]</span>
