--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -568,7 +568,7 @@
                             </div>
                         </td>
                         <td>
-                            <button class="btn btn-success" v-on:click="restoreDigest(highlight)"><i class="fas fa-edit"></i></button>
+                            <button class="btn btn-outline-success" v-on:click="restoreDigest(highlight)"><i class="fas fa-edit"></i></button>
                         </td>
                         <td>
                             <div class="" v-if="highlight.status == 'Available'">
