Mod ソートボタンをアイコンに変更

--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -271,7 +271,8 @@
             </p>
             <div class="mt-2">
                 <button class="btn btn-info" v-on:click="sortTimelineClipsByDatetime">
-                    Sort by datetime
+                    <i class="fas fa-sort-amount-down-alt"></i>
+                    <i class="far fa-clock"></i>
                 </button>
             </div>
         </div>
