#53 Mod アイコンをレンチに変更

--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -569,7 +569,9 @@
                             </div>
                         </td>
                         <td>
-                            <button class="btn btn-outline-success" v-on:click="restoreDigest(highlight)"><i class="fas fa-edit"></i></button>
+                            <button class="btn btn-outline-success" v-on:click="restoreDigest(highlight)">
+                                <i class="fas fa-wrench"></i>
+                            </button>
                         </td>
                         <td>
                             <div class="" v-if="highlight.status == 'Available'">
