--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -190,6 +190,7 @@
                                     <div class="h-100 d-flex flex-column justify-content-end">
                                         <div class="d-flex justify-content-between">
                                             <div class="mb-1 text-white text-views rounded px-1 font-weight-bold">views:[[ item.view_count ]]</div>
+                                            <div v-show="item.hype" class="mb-1 text-white text-hype rounded px-1 font-weight-bold">hype:[[ item.hype ]]</div>
                                             <div class="mb-1 text-white text-date rounded px-1 font-weight-bold">[[ item.created_date ]]</div>
                                         </div>
                                     </div>
