--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -26,7 +26,7 @@
     <div class="mt-2 section" id="follows" v-show="clientId.length !== 0">
         <h1>
             <a class="text-dark text-decoration-none font-weight-bold" tabindex="-1" href="#follows" data-toggle="tooltip" title="Click icon to show selected streamer's clips" data-placement="right">
-            Follow Chennels
+            Follow Channels
             </a>
         </h1>
         <div class="row justify-content-center my-2">
