リファクタリング

--- a/cliphype/templates/app/report.html
+++ b/cliphype/templates/app/report.html
@@ -1,4 +1,5 @@
 {% extends "app/base.html" %}
+{% load static %}
 {% load socialaccount %}
 
 {% block head_title %}Report{% endblock %}
@@ -25,7 +26,7 @@
                 </div>
             </div>
         </form>
-    </div>
+        </div>
     </div>
 </div>
 {% endblock %}
