--- a/cliphype/templates/privacy/policy.html
+++ b/cliphype/templates/privacy/policy.html
@@ -1,4 +1,4 @@
-{% extends "privacy/base.html" %}
+{% extends "app/base.html" %}
 
 {% load i18n %}
 {% load static %}
@@ -8,7 +8,7 @@
 {% block content %}
 <main class="bg-light">
     <div class="container p-3">
-        <div class="shadow my-3 p-3">
+        <div class="shadow my-3 p-3 bg-white">
         <h1 class="font-weight-bolder text-dark">プライバシーポリシー</h1>
         <h3 class="mt-5">アクセス解析ツールについて</h2>
         <p>
