--- a/cliphype/templates/app/studio.html
+++ b/cliphype/templates/app/studio.html
@@ -5,6 +5,7 @@
 {% block head_title %}{{ user.username }} | ClipHype{% endblock %}
 
 {% block content %}
+<div id="app" v-cloak>
 <div class="container">
     <!-- SEARCH STREAMER -->
     <div class="section" id="search">
@@ -604,6 +605,7 @@
             </div>
     </section>
     <!-- /REQUESTED DIGEST AREA -->
+</div>
 </div>
 {% endblock %}
 
