#106 Mod アイコンとプレースホルダの追加

--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -14,9 +14,9 @@
                 <h3 class="text-dark font-weight-bold">Streamer</h3>
             </div>
             <div class="col-sm">
-                <input type="text" v-model="streamerName" class="input-lg border rounded shadow-sm pl-2 py-1" required>
+                <input type="text" v-model="streamerName" class="input-lg border rounded shadow-sm pl-2 py-1" placeholder="shroud" required>
                 <button class="btn btn-outline-primary ml-2 px-2 shadow-sm" v-on:click="getStreamerId">
-                    GO
+                    <i class="fas fa-search"></i>
                 </button>
             </div>
         </label>
