--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -150,6 +150,7 @@
                         <div class="row py-2">
                             <datepicker
                                     v-model="datepickerStartedAt"
+                                    @input="formatDatepickerStartedAt()"
                                     :format="DatePickerFormat"
                                     name="datepickerStartedAt"
                                     class="d-inline-flex mr-2 py-1">
@@ -157,6 +158,7 @@
                             <span class="text-center mt-2 font-weight-bold">~</span>
                             <datepicker
                                     v-model="datepickerEndedAt"
+                                    @input="formatDatepickerEndedAt()"
                                     :format="DatePickerFormat"
                                     name="datepickerEndedAt"
                                     class="d-inline-flex ml-2 py-1">
