--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -379,7 +379,7 @@
                 <div class="col-lg-8">
                 <div class="bg-light p-3 rounded shadow-sm">
                     <h3 class="text-dark font-weight-bold">Title</h3>
-                    <input type="text" v-model="title" class="input-lg border rounded shadow-sm py-1" required>
+                    <input type="text" v-model="title" @input="evalCanCreateHighlights()" class="input-lg border rounded shadow-sm py-1" required>
                 <div class="mt-3">
                     <div class="d-inline-flex">
                         <h3 class="text-dark font-weight-bold">Transition</h3>
