#130 Add social connections link

--- a/cliphype/templates/app/base.html
+++ b/cliphype/templates/app/base.html
@@ -56,6 +56,7 @@
 								</button>
 								<ul class="dropdown-menu">
 									<li><a class="ml-3 text-dark" href="{% url 'report' %}">Report</a></li>
+									<li><a class="ml-3 text-dark" href="{% url 'socialaccount_connections' %}">Connection</a></li>
 									<li><a class="ml-3 text-dark" href="{% url 'account_logout' %}">Logout</a></li>
 									<li><a class="ml-3 text-dark" href="{% url 'unlink' %}">Disconnect</a></li>
 								</ul>
