--- a/cliphype/templates/app/index.html
+++ b/cliphype/templates/app/index.html
@@ -516,7 +516,7 @@
                         </button>
                     </div>
                     <div class="row mt-2 d-flex align-items-center justify-content-center">
-                        <ul>
+                        <ul style="list-style: none;">
                             <li v-show="this.userName.length == 0">
                                 <i class="fas fa-times-circle text-danger"></i>
                                 Logged-in
