--- a/cliphype/templates/socialaccount/connections.html
+++ b/cliphype/templates/socialaccount/connections.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container bg-light text-dark mt-3 p-3 rounded shadow">
 <h1>{% trans "Account Connections" %}</h1>
 
 {% if form.accounts %}
@@ -44,7 +44,7 @@
 <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
 {% endif %}
 
-<h2>{% trans 'Add a 3rd Party Account' %}</h2>
+<h2 class="mt-3">{% trans 'Add a 3rd Party Account' %}</h2>
 
 <ul class="socialaccount_providers">
 {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
